# ai-research-assistant-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
app/: app.py
config/: settings.py
evaluation/: eval.py  gold_questions.json
scripts/: ingest_all.py
services/: cache.py  generator.py  ingest.py  memory.py  reranker.py  retriever.py  router.py  verifier.py  web_search.py
